--- a/src/components/breadcrumb/index.module.scss
+++ b/src/components/breadcrumb/index.module.scss
@@ -1,10 +1,10 @@
-.app-breadcrumb.el-breadcrumb {
+.app-breadcrumb:global(.el-breadcrumb) {
   display: inline-block;
   font-size: 14px;
   line-height: 50px;
   margin-left: 10px;
 
-  .no-redirect {
+  :local(.no-redirect) {
     color: #97a8be;
     cursor: text;
   }
